# GoldGrapher

./: LICENSE  Makefile  README.md  pyproject.toml
backend/: app.py  main.py  pyproject.toml
backend/core/config/: __init__.py  firestore.py  logger.py  settings.py
backend/core/model/: auth.py
backend/core/routes/: users.py
backend/core/services/: __init__.py  auth.py  firestore.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/[id]/: example.ts  page.tsx
frontend/components/cards/: MetricCards.tsx
frontend/components/core/: NavigationBar.tsx  SiteFooter.tsx
frontend/components/dropdowns/: NavDropdown.tsx
frontend/components/misc/: DashBar.tsx
frontend/components/modals/ExpenseModal/: ExpenseAdd.tsx
frontend/components/modals/InitialModal/: InitialModal.tsx  InitialModalContent.tsx
frontend/components/tables/: VisualTable.tsx  expenseData.ts
