[project]
name = "midasaccount"
version = "0.1.0"
description = "GoldGrapher, Your all in one money management dashboard. Track your income, design budget and log your progress."
authors = [
    {name = "CypherO2",email = "charlespresley2006@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "routes (>=2.5.1,<3.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
